# pyg-perf-lab

./: .gitignore  .gitlab-ci.yml  .secrets.baseline  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: IMPLEMENTATION.md  gpu_scaling_study.md  sample_cpu_run.md  sample_gpu_run.md
external_tools/: ncu.sh  nsys.sh
scripts/: bench_loader.py  profile_step.py
src/pyg_perf/: __init__.py  cli.py  config.py  graphs.py  models.py  runners.py  timing.py
tests/: conftest.py  test_cli.py  test_config.py  test_graphs.py  test_models.py  test_runners.py  test_timing.py
